--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </nav>
                 <div class="header-search">
-                    <form action="" method="get">
+                    <form method="get">
                         <input name="s" placeholder="Искать страны, туры, рейсы и другое" type="search">
                     </form>
                 </div>
@@ -50,38 +50,24 @@
                             <p>Столица и крупнейший город Беларуси, административный центр Минской области и Минского района, в состав которых не входит, поскольку является самостоятельной административно-территориальной единицей с особым статусом. Крупнейший транспортный узел, политический, экономический, культурный и научный центр страны. Является ядром Минской агломерации. Десятый по численности населения город в Европе, пятый - после Москвы, Санкт-Петербурга, Ташкента, Киева, на территории бывшего СССР.</p>
                         </div>
                     </div>
-                    <div class="main-block1__elem1 page1m">
-                        <img src="images/page1/main-block1/main-block1_2.png" alt="paris-foto">
-                        <div class="main-block1__elem1_info" id="page1b1">
-                            <h1>Париж, Франция</h1>
-                            <p>Столица и крупнейший город Франции. Находится на севере государства, в центральной части Парижского бассейна, на реке Сена. Население — 2,2 млн человек (2016). Центр агломерации Большой Париж (6,6 млн), ядро исторического региона Иль-де-Франс (более 12 млн). Образует коммуну и департамент, разделённый на 20 округов. Относится к глобальным городам и мировым финансовым центрам.</p>
-                        </div>
-                    </div>
-                    <div class="main-block1__elem1 page1m">
-                        <img src="images/page1/main-block1/main-block1_3.png" alt="tokyo-foto">
-                        <div class="main-block1__elem1_info" id="page1b1">
-                            <h1>Токио, Япония</h1>
-                            <p>Столица и крупнейший город Японии, её административный, финансовый, промышленный и политический центр. Крупнейшая городская экономика мира. Расположен в юго-восточной части острова Хонсю, на равнине Канто в бухте Токийского залива Тихого океана. Помимо столицы, Токио также является одной из сорока семи префектур страны.</p>
-                        </div>
-                    </div>
                 </div>
                 <div class="mobile_switches">
-                    <button type="" class="swiper-button-next"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button" class="swiper-button-next"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                     </div>
-                    <button type="" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
                 </div>
                 <div class="main-block1__switches">
-                    <button type=""><img src="images/page1/main-block1/Arrow 2.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow 2.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                     </div>
-                    <button type=""><img src="images/page1/main-block1/Arrow 1.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow 1.png" alt="arrow"></button>
                 </div>
                 </div>
             </section>
@@ -132,14 +118,14 @@
                     </div>
                 </div>
                 <div class="mobile_switches marg">
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
                     </div>
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block3_">
@@ -194,14 +180,14 @@
                     </a>
                 </div>
                 <div class="mobile_switches marg">
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
                     </div>
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block4" id="page1">
