--- a/travels.html
+++ b/travels.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="header-search">
-                    <form action="" method="get">
+                    <form method="get">
                         <input name="s" placeholder="Искать страны, туры, рейсы и другое" type="search">
                     </form>
                 </div>
@@ -278,14 +278,14 @@
                     </a>
                 </div>
                 <div class="mobile_switches">
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt="ball3"></div>
                     </div>
-                    <button type=""><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
                 </div>
                 </div>
             </div>
