--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <button type="button" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.png" alt="arrow"></button>
                 </div>
                 <div class="main-block1__switches">
-                    <button type="button"><img src="images/page1/main-block1/Arrow 2.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow2.png" alt="arrow"></button>
                     <div class="main-block1__switches__radio">
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.png" alt=""></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/Arrow 1.png" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/Arrow1.png" alt="arrow"></button>
                 </div>
                 </div>
             </section>
