--- a/country.html
+++ b/country.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Filon N.V. for BSTU. Category: site, travel, tour, country, visitor, hotels">
     <title>Беларусь - TravelCO</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
